--- a/auth.html
+++ b/auth.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Floda</title>
-    <link rel="stylesheet" href="Styles/authentication_style.css" >
+    <link rel="stylesheet" href="./Styles/authentication_style.css" >
 </head>
 <body>
    <section >
@@ -27,6 +27,6 @@
         
     </div>
    </section>
-  <script src="/js/auth_script.js"></script>
+  <script src="./js/auth_script.js"></script>
 </body>
 </html>
