--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="Styles/formating.css" >
+    <link rel="stylesheet" href="./Styles/formating.css" >
     <title>Floda</title>
     <style>
      @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&display=swap');
@@ -21,9 +21,9 @@
                  <input class="button" type="submit" value="Find your bouquet">
              </a>
              <div class="icons">
-                <img  src="Images/facebook.png">
+                <img  src="./Images/facebook.png">
                 <img id="icon" src="Images/instagram.png">
-                <img src="Images/twitter.png">
+                <img src="./Images/twitter.png">
             </div>
       </div>
 </body>
