modify home href style

--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Flower</title>
-    <link rel="stylesheet" href="Styles/home_style.css" >
+    <link rel="stylesheet" href="./Styles/home_style.css" >
     <title>Floda</title>
     <style>
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Yesteryear&display=swap');
@@ -42,7 +42,7 @@
 
         </nav>
         <div id="banner">
-            <img src="/Images/home_banner.jpg">
+            <img src="./Images/home_banner.jpg">
                 <small>Valentine Gift</small> 
                 <h2>Fresh Your Mind<br> & Feeling Love</h2>
                 <div id="shopNow">Shop Now</div>
@@ -77,7 +77,7 @@
         </div> 
         <div class="avantages">
             <div class="advantage">
-                <img src="/Images/free-delivery.png">
+                <img src="./Images/free-delivery.png">
                     <p>
                         <span>
                             <b>FREE SHIPPING</b>
@@ -88,7 +88,7 @@
                     </p>
             </div>
             <div class="advantage">
-                <img src="/Images/24-hours-support.png">
+                <img src="./Images/24-hours-support.png">
                     <p>
                         <span>
                             <b>SUPPORT 24/7</b>
@@ -99,7 +99,7 @@
                     </p>
             </div>
             <div class="advantage">
-                <img src="/Images/dollar.png">
+                <img src="./Images/dollar.png">
                     <p>
                         <span>
                             <b>MONEY RETURN</b>
@@ -110,7 +110,7 @@
                     </p>
             </div>
             <div class="advantage">
-                <img src="/Images/discount.png">
+                <img src="./Images/discount.png">
                     <p>
                         <span>
                             <b>ORDER DISCOUNT</b>
@@ -487,6 +487,6 @@
             </div>
         </div>
     </div>
-   <script src="/js/home_script.js"></script>
+   <script src="./js/home_script.js"></script>
 </body>
 </html>
