modify home images url

--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <body>
-    <img class="left-arrow" src="Images/cart/left-arrow.png">
+    <img class="left-arrow" src="./Images/cart/left-arrow.png">
     <b id="welcomeStatement">Welcome to Floda online store</b>
     <hr>
     <div class="container">
@@ -25,13 +25,13 @@
                 <il class="nav-contactus">CONTACTUS</il>
                 </ul>
                 <div class="icons">
-                    <img class="icon" src="/Images/search.png">
+                    <img class="icon" src="./Images/search.png">
                     <a href="/profile.html">
-                        <img class="icon" src="/Images/profile.png">
+                        <img class="icon" src="./Images/profile.png">
                     </a>
-                    <img class="icon" src="/Images/heart.png">
+                    <img class="icon" src="./Images/heart.png">
                     <a href="cart.html">
-                        <img class="icon" src="/Images/shopping-cart.png">
+                        <img class="icon" src="./Images/shopping-cart.png">
 
                     </a>
                 </div>          
