modifying all url images and styles

--- a/cart.html
+++ b/cart.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Floda</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="Styles/home_style.css" >
+    <link rel="stylesheet" href="./Styles/home_style.css" >
 </head>
 <body>
 <div class="cart-container">
     <header>
         <div class="header">
-            <img class="left-arrow" src="Images/cart/left-arrow.png">
+            <img class="left-arrow" src="./Images/cart/left-arrow.png">
             <h1>SHOPPING CART</h1>
-            <img class="share" src="Images/cart/share.png">
+            <img class="share" src="./Images/cart/share.png">
         </div> 
     </header>
    
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </div>
-     <img src="Images/new_products/classic_pink_bouquet.jpg">
+     <img src="./Images/new_products/classic_pink_bouquet.jpg">
 
     </div>
     <div class="cart-product">
@@ -53,7 +53,7 @@
                 </div>
             </div>
         </div>
-     <img src="Images/new_products/classic_pink_bouquet.jpg">
+     <img src="./Images/new_products/classic_pink_bouquet.jpg">
 
     </div>
     <div class="cart-product">
@@ -72,7 +72,7 @@
                 </div>
             </div>
         </div>
-     <img src="Images/new_products/classic_pink_bouquet.jpg">
+     <img src="./Images/new_products/classic_pink_bouquet.jpg">
 
     </div>
     </div>
@@ -82,7 +82,7 @@
       </div>
       <p>Full free shipping & handling...</p>
       <div class="next">
-        <img src="/Images/cart/next.png" >
+        <img src="./Images/cart/next.png" >
       </div >
     </div>
     <div>
@@ -112,7 +112,7 @@
             </footer>
 
 </div>
-<script src="/js/home_script.js"></script>
+<script src="./js/home_script.js"></script>
 
 </body>
 </html>
