--- a/contact_us.html
+++ b/contact_us.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"  href="Styles/contactus_style.css">
+    <link rel="stylesheet"  href="./Styles/contactus_style.css">
     <title>Floda</title>
 </head>
 <body>
     <header>
         <div class="contactus-description">
-            <img class="left-arrow" src="Images/cart/left-arrow.png">
+            <img class="left-arrow" src="./Images/cart/left-arrow.png">
             <h1>Floda</h1>
             <p class="contactus-description-stm">Home About Product Flower's Contact</p>
         </div>
@@ -42,7 +42,7 @@
             <input type="submit" value="Contact Us ->">
         </form>
     </main>
-    <script src="/js/home_script.js"></script>
+    <script src="./js/home_script.js"></script>
 </body>
 
 </html>
