--- a/profile.html
+++ b/profile.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Styles/profile_style.css" >
+    <link rel="stylesheet" href="./Styles/profile_style.css" >
     <title>Floda</title>
 </head>
 <body>
     <div class="body-content">
         <div class="image-container">
-            <img src="/Images/profile_image.jpg">
+            <img src="./Images/profile_image.jpg">
         </div>
         <div class="information-container">
             <h1>Personal Information</h1>
