correcting url of an image and the url of correctus page

--- a/home.html
+++ b/home.html
@@ -22,11 +22,11 @@
                 <il><a>PAGES</a></il>
                 <il><a>SHOP</a></il>
                 <il><a>BLOG</a></il>
-                <il class="nav-contactus">CONTACTUS</il>
+                <il class="nav-contactus"><a href="contact_us.html">CONTACTUS</a></il>
                 </ul>
                 <div class="icons">
                     <img class="icon" src="./Images/search.png">
-                    <a href="/profile.html">
+                    <a href="profile.html">
                         <img class="icon" src="./Images/profile.png">
                     </a>
                     <img class="icon" src="./Images/heart.png">
