--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
                 <il><a>PAGES</a></il>
                 <il><a>SHOP</a></il>
                 <il><a>BLOG</a></il>
-                <il class="nav-contactus"><a href="contact_us.html">CONTACTUS</a></il>
+                <il class="nav-contactus"><a >CONTACTUS</a></il>
                 </ul>
                 <div class="icons">
                     <img class="icon" src="./Images/search.png">
